--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -196,29 +196,20 @@ main {
                 .orbit-image {
                     height: 200px;
                     width: auto;
-                    margin: 20px 0 0 0;
+                    margin: 0;
                     @include breakpoint(medium) {
                         height: 250px;
-                        margin-right: 40px;
+                        margin-right: 80px;
                     }
                     @include breakpoint(large) {
                         height: 320px;
-                        margin-right: 50px;
+                        margin-right: 120px;
                     }
                     @include breakpoint(xlarge) {
                         height: 350px;
                         margin-right: 150px;
                     }
                 }     
-                .pizza-slice {
-                    @include breakpoint(medium) {
-                        margin-right: 80px;
-                    }
-                    @include breakpoint(large) {
-                        margin-right: 120px;
-                    }
-
-                }   
             }
         }
         .orbit-slogan-mobile {
@@ -414,64 +405,61 @@ main {
     }
     .gallery {
         margin: 0 10px;
+        overflow: hidden;
         @include breakpoint(small only) {
             margin: 0;
         }
         .main-img {
-            margin: auto;
-            padding: 40px 0;
+            margin: 20px auto 0;
+            padding: 0;
             @include breakpoint(small only) {
                 padding: 0 0 20px 0;
             }
-    
             img {
                 border-radius: $global-radius;
-                max-height: 500px;
+                max-height: 550px;
+                @include breakpoint(small only) {
+                    max-height: 400px;
+                }
+    
             }
         }
         .mini-img {
             margin: auto;
             ul {
                 margin: 20px auto;
-                img {
-                    border-radius: $global-radius;
-                    width: auto;
-                    height: 200px;
+                overflow: hidden;
+                @include breakpoint(small only) {
+                    margin: 5px 0 15px;
+                }
+                li {
+                    width: 170px;
+                    height: 170px;
+                    overflow: hidden;
                     margin: 5px;
                     @include breakpoint(small only) {
+                        width: 100px;
                         height: 100px;
                     }            
+                    a {
+                        width: 170px;
+                        height: 170px;
+                        overflow: hidden;
+                        padding: 0;
+                        margin: 0;
+                        @include breakpoint(small only) {
+                            width: 100px;
+                            height: 100px;
+                        }  
+                        img {
+                            width: 100%;
+                            height: auto;
+                        }            
+                    }     
                 }
             }
         }
-    }
-    .product-image-gallery {
-        background-color: $white;
-        padding: 1.5rem;
-      }
-      
-      .pdp-product-image {
-        margin-bottom: 20px;
-      }
-      
-      .product-thumbs {
-        
-        a {
-          margin-left: 8px;
-          margin-right: 8px;
-          padding: 0 !important;
-          
-          img {
-            @include thumbnail;
-            border-radius: $global-radius;
-            width: 80px;
-            height: 80px;
-            border: none;
-          }
-        }
-      }
-      
-
+    }      
 }
 
 .map {
