--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -18,7 +18,7 @@ header {
     max-width: 1300px;
     background-color: $main-color;
     z-index: 1;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Oswald', 'PT Sans', sans-serif;
     .top-info {
         padding: 10px;
         background-color: $main-color;
@@ -127,17 +127,17 @@ header {
 main {
     background-color: $white;
     margin: 0;
-    padding-top: 50px;
+    padding-top: 30px;
     // padding: 0 30px;
-    .burger-cutout {
-        margin: 80px 0 20px 0;
-        @include breakpoint(medium) {
-            margin-top: 60px;
-          }
-          @include breakpoint(large) {
-            bottom: -30px;
-          }
-    }
+    // .burger-cutout {
+    //     margin: 80px 0 20px 0;
+    //     @include breakpoint(medium) {
+    //         margin-top: 60px;
+    //       }
+    //       @include breakpoint(large) {
+    //         bottom: -30px;
+    //       }
+    // }
     .orbit {
         .orbit-previous,
         .orbit-next {
@@ -179,7 +179,7 @@ main {
                         left: 20%;
                     }
                     h3, h5 {
-                        font-family: 'Oswald', sans-serif;    
+                        font-family: 'Oswald', 'PT Sans', sans-serif;
                     }
                     h5 {
                         color: $main-color;
@@ -197,6 +197,9 @@ main {
                     height: 200px;
                     width: auto;
                     margin: 0;
+                    @include breakpoint(small only) {
+                        margin-top: 50px;
+                    }
                     @include breakpoint(medium) {
                         height: 250px;
                         margin-right: 80px;
@@ -215,7 +218,7 @@ main {
         .orbit-slogan-mobile {
             margin-bottom: 40px;
             h3, h5 {
-                font-family: 'Oswald', sans-serif;    
+                font-family: 'Oswald', 'PT Sans', sans-serif;
             }
             h5 {
                 color: $main-color;
@@ -306,7 +309,7 @@ main {
                 margin: 0;
                 padding: 0;
                 h4 {
-                    font-family: 'Oswald', sans-serif;
+                    font-family: 'Oswald', 'PT Sans', sans-serif;
                     font-weight: 600;
                     text-transform: uppercase;
                 }
@@ -395,7 +398,7 @@ main {
         margin: 0;
         background-color: $main-color;
         color: $white;
-        font-family: 'Oswald', sans-serif;
+        font-family: 'Oswald', 'PT Sans', sans-serif;
         font-weight: 600;
         text-transform: uppercase;
         @include breakpoint(small only) {
@@ -478,7 +481,7 @@ main {
         margin: 0;
         background-color: $main-color;
         color: $white;
-        font-family: 'Oswald', sans-serif;
+        font-family: 'Oswald', 'PT Sans', sans-serif;
         font-weight: 600;
         text-transform: uppercase;
         @include breakpoint(small only) {
@@ -506,11 +509,9 @@ footer {
         padding: 30px 0;
         margin: 0;
         background-color: $main-color;
-        // background-image: url("../img/white-wood.jpg");
-        font-family: 'Oswald', sans-serif;
+        font-family: 'Oswald', 'PT Sans', sans-serif;
         font-size: 1.2em;
         color: $black;
-        // font-weight: 600;
         .footer-info {
             margin: 0;
             background-color: $white;
