--- a/scss/app.scss
+++ b/scss/app.scss
@@ -56,5 +56,5 @@
 @import '../fontawesome/scss/fontawesome.scss';
 @import '../fontawesome/scss/solid.scss';
 @import '../fontawesome/scss/brands.scss';
-@import url('https://fonts.googleapis.com/css?family=Oswald:400,600');
+@import url('https://fonts.googleapis.com/css?family=Oswald:400,600|PT+Sans:400,700');
 
