--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,4 +1,3 @@
-
 body {
     background-color: $white;
     max-width: 1300px;
@@ -94,7 +93,7 @@ header {
             &:hover {
               background: $white;
               color: $main-color;
-              font-weight: bold;
+              font-weight: 600;
             }
           }
         .top-social {
@@ -188,18 +187,18 @@ main {
                     height: 300px;
                 }
                 @include breakpoint(large) {
-                    height: 400px;
+                    height: 370px;
                     text-align: right;
                 }
                 .orbit-slogan {
                     position: absolute;
-                    left: 6%;
+                    left: 5%;
                     top: 25%;
                     @include breakpoint(large) {
-                        left: 12%;
+                        left: 9%;
                     }
                     @include breakpoint(xlarge) {
-                        left: 20%;
+                        left: 15%;
                     }
                     h3, h5 {
                         font-family: 'Oswald', 'PT Sans', sans-serif;
@@ -218,15 +217,15 @@ main {
                         }
                         a {
                             color: $white;
-                            font-weight: bold;
+                            font-weight: 600;
                             font-size: 1.2em;
                         }
                     }
                 }
                 .orbit-image {
-                    height: 200px;
+                    height: 150px;
                     width: auto;
-                    margin: 0;
+                    margin: 30px 0 0 0;
                     @include breakpoint(medium down) {
                         margin-top: 50px;
                         padding-bottom: 30px;
@@ -236,14 +235,24 @@ main {
                         // margin-right: 80px;
                     }
                     @include breakpoint(large) {
-                        height: 320px;
-                        margin-right: 120px;
+                        height: 260px;
+                        margin-right: 60px;
                     }
                     @include breakpoint(xlarge) {
-                        height: 350px;
+                        height: 290px;
                         margin-right: 150px;
                     }
-                }     
+                } 
+                
+                .pizza-cutout {
+                    height: auto;
+                    width: 500px;
+                    margin-top: 80px;
+                    @include breakpoint(medium down) {
+                        margin-top: 70px;
+                        padding-bottom: 30px;
+                    }
+                }
             }
         }
         .orbit-slogan-mobile {
@@ -283,6 +292,10 @@ main {
                 height: 60px;
                 margin: 0 40px 0 0;
                 float: none;
+                &:active,
+                &:focus {
+                    outline: 0;
+                }
                 &:last-of-type {
                     margin: 0;
                 }
@@ -298,14 +311,14 @@ main {
                             width: 30px;
                         }
                     }
-                .is-active {
-                    border: 1px solid $main-color;
-                }
+                // .is-active {
+                //     border: 1px solid $main-color;
+                // }
             }
             .tabs-title > a {
-                width: 100%;
-                height: 100%;
-                border-radius: 2000px;
+                // width: 100%;
+                // height: 100%;
+                // border-radius: 2000px;
                 @include breakpoint(small) {
                     margin-right: 2px;
                     padding: 3px;
@@ -359,7 +372,7 @@ main {
                     .menu-item-info {
                         margin-bottom: 20px;
                         p {
-                            font-style: italic;
+                            // font-style: italic;
                             margin-bottom: 0;
                         }
                         .button {
