--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -726,11 +726,12 @@ footer {
         }
         .time {
             color: $main-color-dark;
-            padding: 5px 0;
+            padding: 15px 0;
             border-left: 1px solid $light-gray;
             border-right: 1px solid $light-gray;
-            @include breakpoint(small) {
-                border: 0;
+            @include breakpoint(small only) {
+                padding: 10px 0;
+                border: none;
             }
             .days {
                 margin: 0;
@@ -762,20 +763,19 @@ footer {
                     background-color: lighten($yellowish, 5%);
                     -webkit-transform: skew(-15deg);
                     -ms-transform: skew(-15deg);
-                    transform: skew(-15deg);
+                        transform: skew(-15deg);
                     -webkit-transition: .5s ease-in-out;
                     -o-transition: .5s ease-in-out;
-                    transition: .5s ease-in-out;
+                        transition: .5s ease-in-out;
                 }
                 &:hover > a {
                     -webkit-transform: skew(15deg);
-                -ms-transform: skew(15deg);
-                transform: skew(15deg);
-                -webkit-transition: .5s ease-in-out;
-                -o-transition: .5s ease-in-out;
-                transition: .5s ease-in-out;
-
-            }
+                    -ms-transform: skew(15deg);
+                        transform: skew(15deg);
+                    -webkit-transition: .5s ease-in-out;
+                    -o-transition: .5s ease-in-out;
+                        transition: .5s ease-in-out;
+                }
                 a {
                     display: inline-block;
                     color: $black;
