--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -72,6 +72,8 @@ $main-color-dark: #3e7b8a;
 $main-color-light: lighten($main-color, 45%);
 $light-gray: #f5f5f5;
 $my-border: 1px solid $light-gray;
+$td-padding: 10px;
+
 
 @font-face {
   font-family: 'Oswald';
@@ -124,7 +126,7 @@ $black: #0a0a0a;
 $white: #fff;
 $body-background: $white;
 $body-font-color: $black;
-$body-font-family: 'Oswald', 'PT Sans', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$body-font-family: 'Oswald', 'PT Sans', 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
@@ -867,7 +869,7 @@ $titlebar-color: $white;
 $titlebar-padding: 0.5rem;
 $titlebar-text-font-weight: bold;
 $titlebar-icon-color: $white;
-$titlebar-icon-color-hover: $black;
+$titlebar-icon-color-hover: $light-gray;
 $titlebar-icon-spacing: 0.25rem;
 
 // 54. Tooltip
